src_old_backup/driver/ajinextek/AXL(Library)/C, C++/AXA.h


    DWORD    __stdcall AxaInfoIsAIOModule(DWORD *upStatus);
    DWORD    __stdcall AxaInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
    DWORD    __stdcall AxaInfoGetModuleCount(long *lpModuleCount);
    DWORD    __stdcall AxaInfoGetInputCount(long lModuleNo, long *lpCount);
    DWORD    __stdcall AxaInfoGetOutputCount(long lModuleNo, long *lpCount);
    DWORD    __stdcall AxaInfoGetChannelNoOfModuleNo(long lModuleNo, long *lpChannelNo);
    DWORD    __stdcall AxaInfoGetChannelNoAdcOfModuleNo(long lModuleNo, long *lpChannelNo);
    DWORD    __stdcall AxaInfoGetChannelNoDacOfModuleNo(long lModuleNo, long *lpChannelNo);
    DWORD    __stdcall AxaInfoGetModule (long lModuleNo, long *lpBoardNo, long *lpModulePos, DWORD *upModuleID);
    DWORD    __stdcall AxaInfoGetModuleStatus(long lModuleNo);
    DWORD    __stdcall AxaiInfoGetModuleNoOfChannelNo(long lChannelNo, long *lpModuleNo);
    DWORD    __stdcall AxaiInfoGetChannelCount(long *lpChannelCount);
    DWORD    __stdcall AxaiEventSetChannel(long lChannelNo, HWND hWnd, DWORD uMesssage, AXT_EVENT_PROC pProc, HANDLE *pEvent);
    DWORD    __stdcall AxaiEventSetChannelEnable(long lChannelNo, DWORD uUse);
    DWORD    __stdcall AxaiEventGetChannelEnable(long lChannelNo, DWORD *upUse);
    DWORD    __stdcall AxaiEventSetMultiChannelEnable(long lSize, long *lpChannelNo, DWORD uUse);
    DWORD    __stdcall AxaiEventSetChannelMask(long lChannelNo, DWORD uMask);
    DWORD    __stdcall AxaiEventGetChannelMask(long lChannelNo, DWORD *upMask);
    DWORD    __stdcall AxaiEventSetMultiChannelMask(long lSize, long *lpChannelNo, DWORD uMask);
    DWORD    __stdcall AxaiEventRead(long *lpChannelNo, DWORD *upMode);
    DWORD    __stdcall AxaiInterruptSetModuleMask(long lModuleNo, DWORD uMask);
    DWORD    __stdcall AxaiInterruptGetModuleMask(long lModuleNo, DWORD *upMask);
    DWORD    __stdcall AxaiSetRange(long lChannelNo, double dMinVolt, double dMaxVolt);
    DWORD    __stdcall AxaiGetRange(long lChannelNo, double *dpMinVolt, double *dpMaxVolt);
    DWORD    __stdcall AxaiSetRangeModule(long lModuleNo, double dMinVolt, double dMaxVolt);
    DWORD    __stdcall AxaiGetRangeModule(long lModuleNo, double *dMinVolt, double *dMaxVolt);
    DWORD    __stdcall AxaiSetMultiRange(long lSize, long *lpChannelNo, double dMinVolt, double dMaxVolt);
    DWORD    __stdcall AxaiSetTriggerMode(long lModuleNo, DWORD uTriggerMode);
    DWORD    __stdcall AxaiGetTriggerMode(long lModuleNo, DWORD *upTriggerMode);
    DWORD    __stdcall AxaiSetModuleOffsetValue(long lModuleNo, double dMiliVolt);
    DWORD    __stdcall AxaiGetModuleOffsetValue(long lModuleNo, double *dpMiliVolt);
    DWORD    __stdcall AxaiSwReadVoltage(long lChannelNo, double *dpVolt);
    DWORD    __stdcall AxaiSwReadDigit(long lChannelNo, DWORD *upDigit);
    DWORD    __stdcall AxaiSwReadMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
    DWORD    __stdcall AxaiSwReadMultiDigit(long lSize, long *lpChannelNo, DWORD *upDigit);
    DWORD    __stdcall AxaiHwSetMultiAccess(long lSize, long *lpChannelNo, long *lpWordSize);
    DWORD    __stdcall AxaiHwStartMultiAccess(double *dpBuffer);
    DWORD    __stdcall AxaiHwSetSampleFreq(long lModuleNo, double dSampleFreq);
    DWORD    __stdcall AxaiHwGetSampleFreq(long lModuleNo, double *dpSampleFreq);
    DWORD    __stdcall AxaiHwSetSamplePeriod(long lModuleNo, double dSamplePeriod);
    DWORD    __stdcall AxaiHwGetSamplePeriod(long lModuleNo, double *dpSamplePeriod);
    DWORD    __stdcall AxaiHwSetBufferOverflowMode(long lChannelNo, DWORD uFullMode);
    DWORD    __stdcall AxaiHwGetBufferOverflowMode(long lChannelNo, DWORD *upFullMode);
    DWORD    __stdcall AxaiHwSetMultiBufferOverflowMode(long lSize, long *lpChannelNo, DWORD uFullMode);
    DWORD    __stdcall AxaiHwSetLimit(long lChannelNo, long lLowLimit, long lUpLimit);
    DWORD    __stdcall AxaiHwGetLimit(long lChannelNo, long *lpLowLimit, long *lpUpLimit);
    DWORD    __stdcall AxaiHwSetMultiLimit(long lSize, long *lpChannelNo, long lLowLimit, long lUpLimit);
    DWORD    __stdcall AxaiHwStartMultiChannel(long lSize, long *lpChannelNo, long lBuffSize);
    DWORD    __stdcall AxaiHwStartSingleChannelAdc(long lChannelNo, long lBuffSize);
    DWORD    __stdcall AxaiHwStopSingleChannelAdc(long lChannelNo);
    DWORD    __stdcall AxaiHwStartMultiFilter(long lSize, long *lpChannelNo, long lFilterCount, long lBuffSize);
    DWORD    __stdcall AxaiHwStopMultiChannel(long lModuleNo);
    DWORD    __stdcall AxaiHwReadDataLength(long lChannelNo, long *lpDataLength);
    DWORD    __stdcall AxaiHwReadSampleVoltage(long lChannelNo, long *lpSize, double *dpVolt);
    DWORD    __stdcall AxaiHwReadSampleDigit(long lChannelNo, long *lpsize, DWORD *upDigit);
    DWORD    __stdcall AxaiHwIsBufferEmpty(long lChannelNo, DWORD *upEmpty);
    DWORD    __stdcall AxaiHwIsBufferUpper(long lChannelNo, DWORD *upUpper);
    DWORD    __stdcall AxaiHwIsBufferLower(long lChannelNo, DWORD *upLower);
    DWORD   __stdcall AxaiExternalStartADC(long lModuleNo, long lSize, long *lpChannelPos);
    DWORD   __stdcall AxaiExternalStopADC(long lModuleNo);
    DWORD   __stdcall AxaiExternalReadFifoStatus(long lModuleNo, DWORD *dwpStatus);
    DWORD   __stdcall AxaiExternalReadVoltage(long lModuleNo, long lSize, long *lpChannelPos, long lDataSize, long lBuffSize, long lStartDataPos, double *dpVolt, long *lpRetDataSize, DWORD *dwpStatus);
    DWORD    __stdcall AxaoInfoGetModuleNoOfChannelNo(long lChannelNo, long *lpModuleNo);
    DWORD    __stdcall AxaoInfoGetChannelCount(long *lpChannelCount);
    DWORD    __stdcall AxaoSetRange(long lChannelNo, double dMinVolt, double dMaxVolt);
    DWORD    __stdcall AxaoGetRange(long lChannelNo, double *dpMinVolt, double *dpMaxVolt);
    DWORD    __stdcall AxaoSetMultiRange(long lSize, long *lpChannelNo, double dMinVolt, double dMaxVolt);
    DWORD    __stdcall AxaoWriteVoltage(long lChannelNo, double dVolt);
	DWORD    __stdcall AxaoWriteMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
	DWORD    __stdcall AxaoWriteDigit(long lChannelNo, DWORD dwDigit);
	DWORD    __stdcall AxaoWriteMultiDigit(long lSize, long *lpChannelNo, DWORD *dpDigit);
    DWORD    __stdcall AxaoReadVoltage(long lChannelNo, double *dpVolt);
    DWORD    __stdcall AxaoReadMultiVoltage(long lSize, long *lpChannelNo, double *dpVolt);
	DWORD    __stdcall AxaoReadDigit(long lChannelNo, DWORD *upDigit);
	DWORD    __stdcall AxaoReadMultiDigit(long lSize, long *lpChannelNo, DWORD *dpDigit);
	DWORD   __stdcall AxaoPgSetUserPatternGenerator(long lChannelNo, long lLoopCnt, long lPatternSize, double *dpPattern);
	DWORD   __stdcall AxaoPgSetUserPatternGeneratorDigit(long lChannelNo, long lLoopCnt, long lPatternSize, DWORD *pDigitPattern);
	DWORD   __stdcall AxaoPgGetUserPatternGenerator(long lChannelNo, long *lpLoopCnt, long *lpPatternSize, double *dpPattern);
	DWORD   __stdcall AxaoPgGetUserPatternGeneratorDigit(long lChannelNo, long *lpLoopCnt, long *lpPatternSize, DWORD *pDigitPattern);
	DWORD   __stdcall AxaoPgSetUserInterval(long lChannelNo, double dInterval);
	DWORD   __stdcall AxaoPgGetUserInterval(long lChannelNo, double *dpInterval);
	DWORD	__stdcall AxaoPgGetStatus(long lChannelNo, long *lpIndexNum, long *lpLoopCnt, DWORD *dwpInBusy);
	DWORD   __stdcall AxaoPgSetUserStart(long *lpChannelNo, long lSize);
	DWORD   __stdcall AxaoPgSetUserStop(long *lpChannelNo, long lSize);
	DWORD   __stdcall AxaPgSetUserDataReset(long lChannelNo);
    DWORD   __stdcall AxaoSetNetworkErrorAct(long lChannelNo, DWORD dwSetValue);
	DWORD   __stdcall AxaoSetNetworkErrorUserValue(long lChannelNo, double dVolt);